more class renaming & cleanup